manifests/whoami-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    argocd.argoproj.io/instance: argocd-demo-app-of-app
  name: whoami
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
