manifests/whoami-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: whoami
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.knell.it
      http:
        paths:
          - backend:
              service:
                name: whoami
                name:
                  number: http
            path: /
            pathType: Prefix
  tls:
    - secretName: whoami.knell.it-tls
      hosts:
        - whoami.knell.it
